--- a/wp-content/plugins/events-manager/includes/langs/dbem-hu_HU.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-hu_HU.po
@@ -2489,7 +2489,7 @@ msgstr "Esemény kategóriák"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Esemény címkék"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -5843,19 +5843,19 @@ msgid "Event Tag"
 msgstr "Esemény címke"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Események címke keresése"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Népszerű esemény címkék"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Összes esemény címke"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Szülő esemény címkék"
 
 #: em-posts.php:63
