--- a/wp-content/plugins/events-manager/includes/langs/dbem-nb_NO.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-nb_NO.po
@@ -2703,8 +2703,8 @@ msgstr "Hendelses Kategorier"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
-msgstr "Event Tags"
+msgid "Thinks to Bring"
+msgstr "Thinks to Bring"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
 msgid "%s Pages"
@@ -6366,19 +6366,19 @@ msgid "Event Tag"
 msgstr "Hendelses Tag"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Søk tilstelninger Tags"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Populært arrangement Tags"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Alle tilstelninger Tags"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Parent tilstelninger Tags"
 
 #: em-posts.php:63
