--- a/wp-content/plugins/events-manager/includes/langs/dbem-cs_CZ.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-cs_CZ.po
@@ -2601,7 +2601,7 @@ msgstr "Kategorie událostí"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Štítky událostí"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6168,19 +6168,19 @@ msgid "Event Tag"
 msgstr "Štítek události"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Hledat štítky události"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Populární štítky"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Všechny štítky"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Rodičovské štítky"
 
 #: em-posts.php:63
