--- a/wp-content/plugins/events-manager/includes/langs/dbem-da_DK.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-da_DK.po
@@ -2566,7 +2566,7 @@ msgstr "Eventkategorier"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Event tags"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6134,19 +6134,19 @@ msgid "Event Tag"
 msgstr "Event-tag"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Søg event-tags"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Populære event-tags"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Alle event-tags"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Forælder event-tags"
 
 #: em-posts.php:63
