--- a/wp-content/plugins/events-manager/includes/langs/dbem-de_DE.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-de_DE.po
@@ -2736,7 +2736,7 @@ msgstr "Veranstaltungskategorien"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Veranstaltungsschlagworte"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6469,19 +6469,19 @@ msgid "Event Tag"
 msgstr "Veranstaltungs-Schlagwort"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Suche Veranstaltungenschlagwörter"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Beliebte Veranstaltungsschlagwörter"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Alle Veranstaltungsschlagwörter"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Übergeordnete Veranstaltungsschlagwörter"
 
 #: em-posts.php:63
