--- a/wp-content/plugins/events-manager/includes/langs/dbem-en_GB.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-en_GB.po
@@ -2573,8 +2573,8 @@ msgstr "Event Categories"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
-msgstr "Event Tags"
+msgid "Thinks to Bring"
+msgstr "Thinks to Bring"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
 msgid "%s Pages"
@@ -6207,20 +6207,20 @@ msgid "Event Tag"
 msgstr "Event Tag"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
-msgstr "Search Event Tags"
+msgid "Search Thinks to Bring"
+msgstr "Search Thinks to Bring"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
-msgstr "Popular Event Tags"
+msgid "Popular Thinks to Bring"
+msgstr "Popular Thinks to Bring"
 
 #: em-posts.php:61
-msgid "All Event Tags"
-msgstr "All Event Tags"
+msgid "All Thinks to Bring"
+msgstr "All Thinks to Bring"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
-msgstr "Parent Event Tags"
+msgid "Parent Thinks to Bring"
+msgstr "Parent Thinks to Bring"
 
 #: em-posts.php:63
 msgid "Parent Event Tag:"
