--- a/wp-content/plugins/events-manager/includes/langs/dbem-es_ES.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-es_ES.po
@@ -2608,7 +2608,7 @@ msgstr "Categorías del evento"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Etiquetas del evento"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6312,19 +6312,19 @@ msgid "Event Tag"
 msgstr "Etiqueta de evento"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Buscar etiquetas de evento"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Etiquetas populares de evento"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Todas las etiquetas de evento"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Etiquetas padre de evento"
 
 #: em-posts.php:63
