--- a/wp-content/plugins/events-manager/includes/langs/dbem-it_IT.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-it_IT.po
@@ -2566,7 +2566,7 @@ msgstr "Categorie eventi"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Tag dell'evento"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6131,19 +6131,19 @@ msgid "Event Tag"
 msgstr "Tag dell'evento"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Ricerca tag degli Eventi"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Tag degli Eventi popolari"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Tutti i tag degli eventi"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Tag evento genitore"
 
 #: em-posts.php:63
