--- a/wp-content/plugins/events-manager/includes/langs/dbem-nl_NL.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-nl_NL.po
@@ -2650,7 +2650,7 @@ msgstr "Evenementcategorieën"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Evenementen steekwoorden"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6349,19 +6349,19 @@ msgid "Event Tag"
 msgstr "Evenemententag"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Evenemententags zoeken"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Populaire evenementtags"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Alle evenementtags"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Ouderevenemententags"
 
 #: em-posts.php:63
