--- a/wp-content/plugins/events-manager/includes/langs/dbem-pl_PL.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-pl_PL.po
@@ -2730,7 +2730,7 @@ msgstr "Kategorie wydarzeń"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Tagi wydarzenia"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6425,19 +6425,19 @@ msgid "Event Tag"
 msgstr "Tag wydarzenia"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Szukaj tagów wydarzenia"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Popularne tagi wydarzenia"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Wszystkie tagi wydarzenia"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Nadrzędne tagi wydarzenia"
 
 #: em-posts.php:63
