--- a/wp-content/plugins/events-manager/includes/langs/dbem-ru_RU.po
+++ b/wp-content/plugins/events-manager/includes/langs/dbem-ru_RU.po
@@ -2633,7 +2633,7 @@ msgstr "Категории мероприятий"
 #: admin/em-options.php:577 admin/em-options.php:990 admin/em-options.php:994
 #: admin/em-options.php:995 admin/em-options.php:1516 em-posts.php:54
 #: em-posts.php:57
-msgid "Event Tags"
+msgid "Thinks to Bring"
 msgstr "Метки мероприятий"
 
 #: admin/em-options.php:586 admin/em-options.php:745 admin/em-options.php:1091
@@ -6321,19 +6321,19 @@ msgid "Event Tag"
 msgstr "Метка мероприятия"
 
 #: em-posts.php:59
-msgid "Search Event Tags"
+msgid "Search Thinks to Bring"
 msgstr "Поиск меток мероприятий"
 
 #: em-posts.php:60
-msgid "Popular Event Tags"
+msgid "Popular Thinks to Bring"
 msgstr "Популярные метки мероприятий"
 
 #: em-posts.php:61
-msgid "All Event Tags"
+msgid "All Thinks to Bring"
 msgstr "Все метки мероприятий"
 
 #: em-posts.php:62
-msgid "Parent Event Tags"
+msgid "Parent Thinks to Bring"
 msgstr "Родительские метки мероприятия"
 
 #: em-posts.php:63
